Fix flickering video overlay color on window resize

--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -38,6 +38,7 @@ navbar {
     height: 100%;
     background-color: rgba(255, 255, 255, 0.0);
     transition: background-color 0.2s;
+    user-select: none;
 }
 
 .navitem:hover {
@@ -66,6 +67,7 @@ navbar {
 titlebar {
     display: block;
     width: 100%;
+    background-color: black;
 }
 
 .titlebarheight {
@@ -76,7 +78,7 @@ titlebar video {
     width: 100%;
     position: absolute;
     object-fit: cover;
-    z-index: -1;
+    opacity: 0.35;
 }
 
 .titlebarcontentbox {
@@ -84,8 +86,7 @@ titlebar video {
     position: absolute;
     text-align: center;
     vertical-align: middle;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    background: transparent;
 }
 
 .centered {
